# Voice_test_app

./: AGENTS.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: Hey-Alice_en_android_v4_0_0.ppn
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/alice/ai/: MainActivity.kt
app/src/main/java/com/alice/ai/data/local/: AliceDatabase.kt  ChatDao.kt  ChatSessionEntity.kt  ChatStorageRepository.kt  MessageEntity.kt
app/src/main/java/com/alice/ai/data/model/: ModelRepository.kt
app/src/main/java/com/alice/ai/data/offline/: LlamaJniBridge.kt  (+2 more)
app/src/main/java/com/alice/ai/viewmodel/: ChatViewModel.kt
app/src/main/java/com/projectalice/: AliceActions.kt  MainActivity.kt
app/src/main/java/com/projectalice/data/: AppSettings.kt  EngineRepository.kt  SettingsRepository.kt
app/src/main/java/com/projectalice/engine/: AliceEngineService.kt  AssistantClient.kt  MicrophoneBouncer.kt  PorcupineWakeWordEngine.kt  WakeWordEngine.kt
app/src/main/java/com/projectalice/overlay/: AliceOverlayContent.kt  OverlayService.kt  OverlayViewModel.kt
app/src/main/java/com/projectalice/ui/ai/: AiScreen.kt
app/src/main/java/com/projectalice/ui/n8n/: N8nScreen.kt
app/src/main/java/com/projectalice/ui/navigation/: AppTabs.kt
app/src/main/java/com/projectalice/ui/settings/: PermissionGatekeeper.kt  SettingsScreen.kt  SettingsViewModel.kt
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
(+11 files in other folders)
